# Process

./: CMakeLists.txt  readme.txt
src/: child.cpp  constants.h  parent.cpp
src/ChildProcess/: ChildProcess.cpp  ChildProcess.h
src/CmdParser/: CmdParser.cpp  CmdParser.h
src/ParentProcess/: ParentProcess.cpp  ParentProcess.h
src/Writer/: Writer.cpp  Writer.h
